<resources>
    <string name="app_name">Doctor Appointment</string>
    <string name="logo">logo</string>
    <string name="get_started">Get Started</string>
    <string name="login">Login</string>
    <string name="username_email_id">Username/ Email Id</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="new_user">New User?</string>
    <string name="name">Name</string>
    <string name="spouse_name">Spouse Name</string>
    <string name="age">Age</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="city_state">City, State</string>
    <string name="phone_number">Phone number</string>
    <string name="email_address">Email address</string>
    <string name="sign_up1">Sign-up</string>
    <string name="reset_your_password">Reset Your Password?</string>
    <string name="enter_your_email_below_to_retrieve_your_account">Enter your email below to retrieve your account</string>
    <string name="send_password_reset_link">Send Password Reset Link</string>
    <string name="home">Home</string>
    <string name="info">Info</string>
    <string name="book_your_slot_to_get_your_consultation_done">Book your slot to get your consultation done</string>
    <string name="injections_vaccine">Injections / Vaccine</string>
    <string name="additional_info">Additional Info</string>
    <string name="select_doctor">Select Doctor</string>
    <string name="date">Date</string>
    <string name="time_slot">Time slot</string>
    <string name="disclaimer">*Disclaimer</string>
    <string name="fix_appointment">Fix Appointment</string>
    <string name="treatments">Treatments</string>
    <string name="location">No: 61, Sathy Rd, Ganapathy, Athipalayam Pirivu, Coimbatore -641006</string>
    <string name="location1">Location</string>
    <string name="help_line_number">Help-Line Number</string>
    <string name="_91_93623_73344">+91 93623-73344</string>
    <string name="website">Website</string>
    <string name="www_vamsamfertilitycentre_com">www.vamsamfertilitycentre.com</string>
    <string name="vamsam_fertility_research_centre">Vamsam Fertility Research Centre</string>
    <string name="social_media">Social Media</string>
    <string name="settings">Settings</string>
    <string name="your_profile">Your Profile</string>
    <string name="appointments">Appointments</string>
    <string name="about_us">About Us</string>
    <string name="how_the_app_works">How the App works</string>
    <string name="sign_out">Sign out</string>
    <string name="profile">Profile</string>
    <string name="name1">Name</string>
    <string name="scan">Scan</string>
    <string name="investigations">Investigations</string>
    <string name="injections">Injections</string>
    <string name="appointment_with_doctor">Appointment With Doctor</string>
    <string name="date_22_jan_2022">Date: 22 Jan 2022</string>
    <string name="divider">|</string>
    <string name="time_15_00">Time : 15:00</string>
    <string name="type_investigation">Type : Investigation</string>
    <string name="appointment_details">Appointment Details</string>
    <string name="appointment_booked_for">Appointment Booked for</string>
    <string name="doctor">Doctor</string>
    <string name="cancel_appointment">Cancel Appointment</string>
    <string name="hello_name">Hello, Name</string>
    <string name="latest_appointment">Latest Appointment</string>
    <string name="your_upcoming_appointment_with">Your Upcoming Appointment with</string>
    <string name="our_treatments">Our Treatments</string>
    <string name="decription">decription</string>
    <string name="our_doctors">Our Doctors</string>
    <string name="appointment_for">Appointment for</string>
    <string name="see_all">See all</string>
    <string name="fix_appointment_with_the_nearest_centre">Fix Appointment with the nearest centre</string>
    <string name="select_your_nearest_centre">Select Your Nearest Centre</string>
    <string name="made_with_love_v15go">Made with Love V15go</string>
    <string name="our_centres">Our Centres</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tiu">S Bypass Rd, Vannarpettai, Tirunelveli - 627009</string>
    <string name="_91_93611_92939">+91 93611-92939</string>
    <string name="no_17_ramamoorthy_nagar_karur_bypass_rd_tiruchirappalli_620002">No. 17, Ramamoorthy Nagar, Karur Bypass Rd, Tiruchirappalli - 620002</string>
    <string name="_91_93613_92939">+91 93613-92939</string>
    <string name="_29_108_coonoor_rd_elk_hill_ooty_tamil_nadu_643001">29, 108, Coonoor Rd, Elk Hill, Ooty, Tamil Nadu 643001</string>
    <string name="_91_96553_83344">+91 96553-83344</string>
    <string name="no_12_13_sarojini_st_ranipet_district_arakkonam_631001">No.12, 13, Sarojini St, Ranipet District, Arakkonam - 631001</string>
    <string name="_91_93601_92939">+91 93601-92939</string>
    <string name="google_maps">Google Maps</string>
    <string name="centre_location">Centre Location</string>
    <string name="swipe"><![CDATA[Swipe >>]]></string>
    <string name="click_the_centre_to_see_the_appointment_history">Click the centre to see the appointment history</string>
    <string name="coimbatore">Coimbatore</string>
    <string name="tirunelveli">Tirunelveli</string>
    <string name="trichy">Trichy</string>
    <string name="ooty">Ooty</string>
    <string name="arakkonam">arakkonam</string>
    <string name="admin_centre_username">Admin Centre Username</string>
    <string name="admin_centre_password">Admin centre Password</string>
    <string name="enter_the_centre_credentials">Enter the Centre Credentials</string>
    <string name="get_in">get in</string>
    <string name="contact_number">Contact Number</string>
    <string name="_91_80982_33344">+91 80982-33344</string>
    <string name="coimbatore_appointments">Coimbatore Appointments</string>
    <string name="arakkonam_appointments">Arakkonam Appointments</string>
</resources>